tests/plugin/syntax-error/script.py
Test handling of Python syntax errors.

This file is not valid Python syntax.
